# watcher-hk

./: pyproject.toml
src/watopnet/app/: watching.py
src/watopnet/core/: httping.py
src/watopnet/core/tcp/: serving.py
tests/watopnet/core/: test_keri_v2_compat.py  test_watching.py
