# pyproject.toml

[build-system]

requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Watopnet"
version = "0.0.1"
description = "Watcher Operational Network"
readme = "README.md"
requires-python = ">=3.14.0"
license = { file = "LICENSE" }

authors = [
    { name = "Phillip Feairheller", email = "pfeairheller@gmail.com" },
    { name = "Ari Argoud", email = "ariargoud@gmail.com" },
]

keywords = ["keri-foundation", "cryptography", "KERI", "ACDC"]

classifiers = [
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies = [
    "hio>=0.7.19",
    "keri @ git+https://github.com/WebOfTrust/keripy.git",
    "multicommand>=1.0.0",
    "falcon==4.2.0",
    "pyotp>=2.9.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.setuptools.package-dir]
"" = "src"

[project.scripts]
watopnet = "watopnet.app.cli.watcher:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
